fixed spacingand also added x icon to remove a single tea within cart summary item

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -158,3 +158,9 @@ img{
 section{
   margin: 3%;
 }
+
+.fa-times:before{
+  position: relative;
+  top:2rem;
+  left:71rem;
+}
